--- a/styles/main.css
+++ b/styles/main.css
@@ -45,3 +45,47 @@
     font-weight: bold;
     font-size: 3rem;
 }
+/* plants section */
+.our-plants{
+    max-width: 1440px;
+    margin: 6rem auto;
+}
+.title-plants {
+    font-weight: bold;
+    font-size: 3rem;
+    text-align: center;
+    margin: 0;
+}
+.description-plants {
+    font-size: 1.5rem;
+    text-align: center;
+}
+.plant-cards {
+    height: 484px;
+    width: 270px;
+}
+.plants-card-image{
+    width: 100%;
+}
+.plant-card-title{
+    text-align: center;
+    font-size: 1.3rem;
+}
+.card-price-tag{
+    text-align: center;
+    font-size: 1.3rem;
+    font-weight: bold;
+}
+.card-button {
+    width: 100%;
+    border: none;
+    color: white;
+    background-color: rgba(233, 90, 8, 1);
+    padding: 19px 80px;
+}
+.card-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    row-gap: 30px;
+    column-gap: 20px;
+}
