--- a/styles/main.css
+++ b/styles/main.css
@@ -175,3 +175,31 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 25px;
 }
+/* join section styles */
+.join-section {
+    margin-top: 120px;
+    width: 100%;
+    height: 533px;
+    background-image: url("/assets/news-letter-bg.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.join-title {
+    color: white;
+    font-size: 3rem;
+    font-weight: bold ;
+}
+.join-email {
+    width: 644px;
+    height: 50px;
+}
+.join-btn {
+    background-color: rgba(233, 90, 8, 1);
+    padding: 16px 50px ;
+    border: none;
+    color: white;
+    font-size: 1.2rem;
+}
