--- a/styles/main.css
+++ b/styles/main.css
@@ -203,3 +203,28 @@
     color: white;
     font-size: 1.2rem;
 }
+/* footer styles */
+footer {
+    justify-content: space-around;
+    margin-top: 50px;
+    /* align-items: center; */
+}
+.footer-title {
+    font-size: 1.5rem;
+}
+
+.footer-lists {
+    list-style: none;
+    color: rgba(137, 135, 161, 1);
+    margin-top: 15px;
+}
+.social {
+    gap: 24px;
+    align-self: flex-start;
+
+}
+.social-icons {
+    margin-top: 5px;
+    width: 36px;
+    height: 36px;
+}
