--- a/styles/main.css
+++ b/styles/main.css
@@ -61,8 +61,8 @@
     text-align: center;
 }
 .plant-cards {
-    height: 484px;
-    width: 270px;
+    max-height: 484px;
+    max-width: 270px;
 }
 .plants-card-image{
     width: 100%;
@@ -94,7 +94,7 @@
 .plants-lover {
     max-width: 1440px;
     max-height: 597px;
-    margin: 210px auto;
+    margin: 150px auto;
     justify-content: space-evenly;
     gap: 60px;
 }
@@ -118,7 +118,7 @@
 /* latest deals styles */
 .latest-deals {
     max-width: 1440px;
-    margin: 0 auto;
+    margin-top: 1000px;
 }
 .ld-grid{
     display: grid;
@@ -227,4 +227,78 @@ footer {
     margin-top: 5px;
     width: 36px;
     height: 36px;
+}
+
+/* responsive layout */
+
+@media screen and (max-width: 576px) {
+    /* navbar */
+    .navbar {
+        justify-content: space-between;
+    }
+    .link1, .link2, .link3 {
+        display: none;
+    }
+    /* banner section */
+    .banner {
+        flex-direction: column-reverse;
+        margin: auto;
+        
+    }
+    
+    .banner-image {
+        max-width: 90%;
+    }
+    /* plants section */
+    .card-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .plants-card-image{
+        width: 100%;
+    }
+    /* plants lover section */
+    .plants-lover {
+        flex-direction: column;
+        margin-bottom: 400px;
+    }
+    .pl-images{
+        width: 361px;
+    }
+    .flower-store-image {
+        width: 90%;
+    }
+    .trusted-badge {
+        display: none;;
+    }
+    /* latest deals section */
+    .latest-deals{
+        margin-top: 140px;
+    }
+    .deals-cards{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .item {
+        max-width: 90%;
+    }
+    /* join section */
+    .join-section {
+        width: 100%;
+        height: 275px;
+    }
+    .join-email {
+        width: 60%;
+        height: 50px;
+    }
+    .join-title{
+        font-size: 1.2rem;
+    }
+    .join-btn{
+        width: 20%;
+        font-size: 1rem;
+        margin: ;
+    }
+    /* footer */
+    footer {
+        flex-direction: column;
+    }
 }
